# tally

./: .gitignore  README.md  TALLY_CANON.md  app.py  pyproject.toml
tally/: __init__.py  core.py  export.py  parser.py  settings.py
tests/: test_core.py  test_export.py  test_parser.py  test_settings.py
