[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tally-vat"
version = "0.1.0"
description = "전체 매입매출장을 월별 부가세 검토표로 변환하는 로컬 앱"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<4",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["tally*"]

